// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authorization with queries Query allowed employee 1`] = `
Object {
  "address": "Tel Aviv",
  "id": "1",
  "name": "John Smith",
}
`;

exports[`Authorization with queries Query alwaysAllow policy 1`] = `
Object {
  "policy": Object {
    "auth_with_query___alwaysAllow": Object {
      "allow": true,
    },
  },
}
`;

exports[`Authorization with queries Query alwaysDeny policy 1`] = `
Object {
  "policy": Object {
    "auth_with_query___alwaysAllow": Object {
      "allow": true,
    },
  },
}
`;

exports[`Authorization with queries Query denied employee 1 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policy notClassified in namespace auth_with_query",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {
    "deniedEmployee1": {
      "id": "2",
      "name": "Mark Zuckerberg",
      "address": null
    }
  }
}
`;

exports[`Authorization with queries Query denied employee 2 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policy notClassified in namespace auth_with_query",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {
    "deniedEmployee2": {
      "id": "2",
      "name": "Tom Baker",
      "address": null
    }
  }
}
`;

exports[`Authorization with queries Query protected field 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policy alwaysDenied in namespace auth_with_query",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;
